新增字母侧边栏的搜索

--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -13,8 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="left"
         >
-    <ListView
+      <com.example.administrator.aap_interphase.View.testView
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="310dp"
+            android:background="#FFFFFF"
+            android:id="@+id/slide_item"
+            android:layout_alignParentRight="true"
+            />
+   <ListView
+        android:layout_marginRight="30dp"
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
