--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="myblcak">#000</color>
+    <color name="red">#33ff0000</color>
+    <color name="darkgray">#0000ff</color>
+    darkgray
 </resources>
